ini-persist/tests/compile-fail/conflicting_section.stderr
error: conflicting section specified
 --> tests/compile-fail/conflicting_section.rs:6:11
  |
6 |     #[ini(section = "That")]
  |           ^^^^^^^^^^^^^^^^

error: conflicting section specified
  --> tests/compile-fail/conflicting_section.rs:13:11
   |
13 |     #[ini(section = "Specific")]
   |           ^^^^^^^^^^^^^^^^^^^^

error: conflicting section specified
  --> tests/compile-fail/conflicting_section.rs:20:11
   |
20 |     #[ini(general)]
   |           ^^^^^^^
